core/src/main/java/com/example/core/error/ResourceNotFoundException.java
package com.example.core.error;

public class ResourceNotFoundException extends RuntimeException{
    public ResourceNotFoundException(String msg) {
        super(msg);
    }

    public ResourceNotFoundException(Throwable cause) {
        super(cause);
    }
}
